    in replacement for the existing Template modules, Template::TT2. They're
    not on CPAN at the time of writing (although they might be by the time
    you read this), but the source code is avaiable via github at
    <http://github.com/abw/Template-TT2> and
    <http://github.com/abw/Template-TT3>.

  Version 0.10 - Not Yet released
    Added Badger::Comparable, Badger::Duration and Badger::Filter.

    Refactored parts of Badger::Config.

    Added no_config() method to Badger::Hub.

    Fixed a bug in the auto_can feature of Badger::Class::Methods which
    prevented it from working with subclasses.

    Fixed a bug in Badger::Debug dump_ref() to make it directly call other
    "dump_XXX()" functions instead of relying on inheritance of those
    methods through $self.

    Added plurality(), inflect(), list_each(), hash_each(), extend(),
    split_to_list(), join_uri() and resolve_uri(), to Badger::Utils.

    Added additional delegate hooks to Badger::Utils to load utility
    functions in Badger::Filesystem, Badger::Timestamp, Badger::Duration,
    Badger::Logic and Badger::URL.

    Squashed a non-numerical warning in Badger::Timestamp.

    Added the UTF8, JSON and YAML constants to Badger::Constants.

    Fixed Badger::Codec::YAML to work better with YAML::XS and
    Badger::Codec::JSON to work better with JSON::XS.

  Version 0.09 - 8th February 2012
    Added Badger::Codec::Timestamp. Changed Badger::Timestamp to numify
    values to remove leading zeroes (e.g. 2012/04/20 now yields a month of 4
    instead of 04).

    Fixed some obscure bugs in the module loading code in Badger::Class and
    related modules that could potentially cause unpredictable results on
    case insensitive file systems (e.g. Apple's HFS with default settings).

    Added the restat() method to Badger::Filesystem::Path.

    Added documentation for various methods that was missing. Temporary
    disabled the Pod::Coverage tests on AUTOMATED_TESTING systems. We know